# SARVault

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  LICENSE-DATA.md  README.md  SPEC.md  docker-compose.yml  probe_f32.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: target_set.yml
dashboard/: app.py  branding.py  charts.py  chem.py  compound_detail.py  data.py  logic.py  scope.py  viewer.py
dashboard/views/: activity_cliffs.py  chemical_series.py  chemical_space.py  compound_library.py  data_quality.py  overview.py  payload_comparison.py  sar.py  selectivity.py
dbt/: dbt_project.yml
dbt/profiles/: .user.yml  profiles.yml
dbt/seeds/: xref_sources.csv
dbt/snapshots/: _snapshots.yml  compound_status.sql
dbt/tests/: assert_cliff_grain.sql  assert_cliff_thresholds.sql  assert_cytotox_grain.sql  assert_cytotox_potency_in_range.sql  (+12 more)
docs/: DATA_PROFILE.md  DEPLOY.md  ORCHESTRATION.md
extract/: chembl_client.py  cheminfo.py  config.py  embedding.py  extract_activities.py  extract_assays.py  extract_cell_activities.py  extract_molecules.py  extract_targets.py  load_raw.py  pdbe.py  run.py
orchestration/: definitions.py
scripts/: __init__.py  profile_sar.py
tests/: test_branding.py  test_cell_activities.py  test_cheminfo.py  test_cliffs.py  test_config.py  test_dashboard.py  test_embedding.py  test_extract.py  test_imports.py  test_observability.py  test_orchestration.py  test_payload_class.py  test_profile_sar.py  test_scope.py  test_series.py  test_similarity.py  test_snapshot.py
validation/: schemas.py
(+45 files in other folders)
